@@ -14,13 +14,17 @@
 # along with GCC; see the file COPYING3.  If not see
 # <http://www.gnu.org/licenses/>.
 
-# Define compiler flags, LIBSTDCXX_RAW_CXX_CXXFLAGS, for libstdc++-v3
-# header files to compile libraries in C++ with raw_cxx=true.
+# Define flags, LIBSTDCXX_RAW_CXX_CXXFLAGS and # LIBSTDCXX_RAW_CXX_LDFLAGS,
+# for libstdc++-v3 header files to compile and link libraries in C++ with
+# raw_cxx=true.
 AC_DEFUN([GCC_LIBSTDCXX_RAW_CXX_FLAGS], [
   AC_REQUIRE([ACX_NONCANONICAL_TARGET])
   LIBSTDCXX_RAW_CXX_CXXFLAGS="\
     -I\$(top_builddir)/../libstdc++-v3/include \
     -I\$(top_builddir)/../libstdc++-v3/include/\$(target_noncanonical) \
     -I\$(top_srcdir)/../libstdc++-v3/libsupc++"
+  LIBSTDCXX_RAW_CXX_LDFLAGS="\
+    -I\$(top_builddir)/../libstdc++-v3/src/libstdc++.la"
   AC_SUBST(LIBSTDCXX_RAW_CXX_CXXFLAGS)
+  AC_SUBST(LIBSTDCXX_RAW_CXX_LDFLAGS)
 ])
