@@ -1,5 +1,16 @@
 2012-12-12  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* asan/Makefile.am (libasan_la_LIBADD): Use $(LIBSTDCXX_RAW_CXX_LDLAGS).
+	* tsan/Makefile.am (libtsan_la_LIBADD): Likewise.
+	* Makefile.in: Regenerated.
+	* configure: Likewise.
+	* asan/Makefile.in: Likewise.
+	* interception/Makefile.in: Likewise.
+	* sanitizer_common/Makefile.in: Likewise.
+	* tsan/Makefile.in: Likewise.
+
+2012-12-12  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* Makefile.am (AM_MAKEFLAGS): Removed.
 	(MAKEOVERRIDES): Likewise.
 	* asan/Makefile.am: Likewise.
